--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
     "@tailus/themer": "^0.0.4",
+    "@tailus/themer-button": "^0.0.2",
+    "@tailus/themer-card": "^0.0.1",
+    "@tailus/themer-form": "^0.0.1",
     "astro": "^4.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
